# async-trait-bug

./: Cargo.toml
src/: lib.rs
