[package]
name = "async-trait-bug"
version = "0.1.0"
authors = ["Freyskeyd <simon.paitrault@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.10", features = ["json", "cookies", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
